# datafusion-federation

./: .gitignore  .release-plz.toml  .taplo.toml  Cargo.toml  README.md  cargo.toml
.github/: dependabot.yml
.github/workflows/: check.yml  docs.yml  pull-request.yml  release.yml  release_plz.yml  test.yml
datafusion-federation/: CHANGELOG.md  Cargo.toml
datafusion-federation/examples/: df-csv-advanced.rs  df-csv.rs  df-unnest.rs
datafusion-federation/examples/data/: test.csv  test2.csv  unnest.ndjson
datafusion-federation/examples/shared/: mod.rs
datafusion-federation/src/: analyzer.rs  lib.rs  optimize.rs  optimizer.rs  plan_node.rs  schema_cast.rs  table_provider.rs
datafusion-federation/src/analyzer/: mod.rs  scan_result.rs
datafusion-federation/src/optimize/optimize_projections/: mod.rs  required_indices.rs
datafusion-federation/src/optimizer/: mod.rs  scan_result.rs
datafusion-federation/src/schema_cast/: intervals_cast.rs  lists_cast.rs  mod.rs  record_convert.rs  struct_cast.rs
datafusion-federation/src/sql/: analyzer.rs  ast_analyzer.rs  executor.rs  mod.rs  schema.rs  table.rs  table_reference.rs
datafusion-flight-sql-server/: CHANGELOG.md  Cargo.toml  README.md
datafusion-flight-sql-server/examples/: flight-sql.rs  test.csv
datafusion-flight-sql-server/src/: lib.rs  service.rs  session.rs  state.rs
datafusion-flight-sql-server/src/server/: mod.rs  service.rs
datafusion-flight-sql-table-provider/: CHANGELOG.md  Cargo.toml
datafusion-flight-sql-table-provider/src/: lib.rs
examples/: Cargo.toml  README.md  cargo.toml
examples/examples/: flight-sql.rs  postgres-partial.rs  sqlite-partial.rs  sqlite-subquery.rs  sqlite.rs
sources/flight-sql/: Cargo.toml
sources/flight-sql/src/: lib.rs
sources/flight-sql/src/executor/: mod.rs
sources/flight-sql/src/server/: mod.rs  service.rs  session.rs  state.rs
sources/sql/: Cargo.toml  README.md
sources/sql/src/: executor.rs  lib.rs  producer.rs  schema.rs
sources/sql/src/connectorx/: executor.rs  mod.rs
sql-writer/: Cargo.toml
sql-writer/examples/: expr.rs  plan.rs
sql-writer/src/: ast_builder.rs  lib.rs
