[workspace]
resolver = "2"

members = ["datafusion-federation"]

[workspace.package]
version = "0.4.8"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/datafusion-contrib/datafusion-federation"

[workspace.dependencies]
arrow-json = "56"
async-stream = "0.3.5"
async-trait = "0.1.83"
datafusion = { git = "https://github.com/alamb/datafusion.git", rev = "055959112" }
datafusion-federation = { path = "./datafusion-federation", version = "0.4.8" }
futures = "0.3.31"
tokio = { version = "1.41", features = ["full"] }
