[package]
name = "datafusion-federation"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description = "Datafusion federation."

[lib]
name = "datafusion_federation"
path = "src/lib.rs"

[features]
sql = ["futures"]

[dependencies]
async-trait.workspace = true
datafusion.workspace = true

futures = { version = "0.3.30", optional = true }

[package.metadata.docs.rs]

# Whether to pass `--all-features` to Cargo (default: false)
all-features = true

# Whether to pass `--no-default-features` to Cargo (default: false)
no-default-features = true
