[package]
name = "datafusion-federation"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Datafusion federation."

[lib]
name = "datafusion_federation"
path = "src/lib.rs"

[package.metadata.docs.rs]
# Whether to pass `--all-features` to Cargo (default: false)
all-features = true
# Whether to pass `--no-default-features` to Cargo (default: false)
no-default-features = true

[features]
sql = []

[dependencies]
arrow-array.workspace = true
arrow-cast.workspace = true
arrow-json.workspace = true
arrow-schema.workspace = true
async-stream.workspace = true
async-trait.workspace = true
datafusion.workspace = true
datafusion-catalog.workspace = true
datafusion-common.workspace = true
datafusion-execution.workspace = true
datafusion-expr.workspace = true
datafusion-optimizer.workspace = true
datafusion-physical-expr.workspace = true
datafusion-physical-plan.workspace = true
datafusion-sql.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[[example]]
name = "df-csv"
path = "examples/df-csv.rs"
required-features = ["sql"]
