[package]
name = "datafusion-flight-sql-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Datafusion flight sql server."

[lib]
name = "datafusion_flight_sql_server"
path = "src/lib.rs"

[dependencies]
arrow-array.workspace = true
arrow-flight.workspace = true
arrow-ipc.workspace = true
arrow-schema.workspace = true
datafusion.workspace = true
datafusion-common.workspace = true
datafusion-execution.workspace = true
datafusion-expr.workspace = true
datafusion-substrait.workspace = true

futures = "0.3.30"
log = "0.4.22"
once_cell = "1.19.0"
prost = "0.13.1"
tonic = { version = "0.12.1", features = [
    "tls",
    "transport",
    "codegen",
    "prost",
] }

[dev-dependencies]
datafusion-catalog.workspace = true
datafusion-federation = { workspace = true, features = ["sql"] }
datafusion-flight-sql-table-provider = { path = "../datafusion-flight-sql-table-provider" }
tokio = { version = "1.39.3", features = ["full"] }
