[package]
name = "datafusion-flight-sql-server"
version = "0.4.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Datafusion flight sql server."

[lib]
name = "datafusion_flight_sql_server"
path = "src/lib.rs"

[dependencies]
arrow-flight.workspace = true
arrow.workspace = true
datafusion-federation = { workspace = true, features = ["sql"] }
datafusion-substrait.workspace = true
datafusion.workspace = true
futures.workspace = true
log = "0.4.22"
once_cell = "1.19.0"
prost = "0.13.1"
tonic.workspace = true
async-trait.workspace = true 

[dev-dependencies]
tokio.workspace = true
datafusion-flight-sql-table-provider = { path = "../datafusion-flight-sql-table-provider" }
