[package]
name = "datafusion-flight-sql-table-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
arrow.workspace = true
arrow-flight.workspace = true
async-trait.workspace = true
datafusion.workspace = true
datafusion-federation = { workspace = true, features = ["sql"] }

futures = "0.3.30"
tonic = { version = "0.12.1", features = [
    "tls",
    "transport",
    "codegen",
    "prost",
] }
