[package]
name = "datafusion-flight-sql-table-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
arrow-flight.workspace = true
arrow-schema.workspace = true
async-trait.workspace = true
datafusion-common.workspace = true
datafusion-execution.workspace = true
datafusion-federation = { workspace = true, features = ["sql"] }
datafusion-physical-plan.workspace = true
datafusion-sql.workspace = true

futures = "0.3.30"
tonic = { version = "0.12.1", features = [
    "tls",
    "transport",
    "codegen",
    "prost",
] }
