[package]
name = "datafusion-flight-sql-table-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
arrow-flight.workspace = true
arrow.workspace = true
async-trait.workspace = true
datafusion-federation = { workspace = true, features = ["sql"] }
datafusion.workspace = true
futures.workspace = true
tonic.workspace = true
