[package]
name = "datafusion-federation-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dev-dependencies]
arrow-flight = { version = "49.0.0", features = ["flight-sql-experimental"] }
tokio = "1.35.1"
async-trait.workspace = true
datafusion.workspace = true
datafusion-federation.path = "../datafusion-federation"
datafusion-federation-sql.path = "../sources/sql"
datafusion-federation-flight-sql.path = "../sources/flight-sql"
connectorx = { git = "https://github.com/sfu-db/connector-x.git", rev = "fa0fc7bc", features = [
    "dst_arrow",
    "src_sqlite",
] }
tonic = "0.10.2"

[dependencies]
async-std = "1.12.0"

[features]
postgres = ["connectorx/src_postgres"]
