[package]
name = "datafusion-federation-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dev-dependencies]
arrow-flight = { version = "52.0.0", features = ["flight-sql-experimental"] }
tokio = "1.35.1"
async-trait.workspace = true
datafusion.workspace = true
datafusion-federation.path = "../datafusion-federation"
datafusion-federation-sql.path = "../sources/sql"
datafusion-federation-flight-sql.path = "../sources/flight-sql"
connectorx = { git = "https://github.com/devinjdangelo/connector-x.git", features = [
    "dst_arrow",
    "src_sqlite"
] }
tonic = "0.11.0"

[dependencies]
async-std = "1.12.0"

[features]
postgres = ["connectorx/src_postgres"]
