[package]
name = "datafusion-federation-sql"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "datafusion_federation_sql"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
datafusion.workspace = true

# XXX use the release verion on crates.io 
datafusion-federation.path = "../../datafusion-federation"

connectorx = { version = "0.3.3" , features = ["dst_arrow", "src_sqlite"] }
futures = "0.3.30"
tokio = "1.39"
