[package]
name = "datafusion-federation-sql"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "datafusion_federation_sql"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
# connectorx = { version = "0.3.2", features = ["src_sqlite"] }
# https://github.com/sfu-db/connector-x/pull/555
connectorx = { git = "https://github.com/devinjdangelo/connector-x.git", features = [
    "dst_arrow",
    "src_sqlite"
], optional = true }
datafusion.workspace = true

# XXX use the release verion on crates.io 
datafusion-federation.path = "../../datafusion-federation"

futures = "0.3.30"
tokio = "1.35.1"
tracing = "0.1.40"

[features]
connectorx = ["dep:connectorx"]

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
